# VT1

./: .gitignore  GUI.md  README.md  compose.yml  config_defaults.toml  download_model.py  mmpose_webcam.py  notes.md  process_all.ps1  pyproject.toml  requirements.txt  run_all_benchmarks.ps1  run_benchmark.ps1  setup_ml_backend.ps1  test_annotation_visual.py  test_mediapipe_new.py  test_mp.py  testing.py
.github/workflows/: build-exe.yml
.run/: GUI.run.xml
benchmark/: README.md  benchmark_comprehensive.py  benchmark_frameworks.py  benchmark_full_pipeline.py  benchmark_pose_models.py  create_benchmark_pdf.py
hockeypose_1/: with_ultralytics.py
hooks/: hook-torch.py  rthook_suppress_torch_warnings.py
mediapipe_video/: mp4_realtime_metrics.py  smoketest_tasks.py
ml_backend/: CONFIGURATION.md  Dockerfile  README.md  _wsgi.py  model.py  start.sh
models/team_clustering/: kmeans.pkl
offline_pipeline/: .gitignore  gui_clustering_tab.py  gui_offline.py  gui_pipeline_tab.py  gui_qt.py  sam_general.py  sam_offline.py
offline_pipeline/team_clustering/: README.md  audit_training_set.py  build_training_set.py  (+2 more)
scripts/: build_exe.bat  extract_frame.py  visualize_pipeline_stages.py
test_hw_info/: benchmark_20260103_162959.json
ultralytics_video/: list_sources.py  sam_general.py  sam_offline.py  sam_test.py  yolo11n_realtime_metrics.py
videos_all_processed/: 001.json  002.json  003.json  004.json  005.json  006.json  metrics_aggregate.json
webcam_tests/: mediapipe_webcam.py  mmpose_webcam.py  openvino_movenet_webcam.py  torchkeypoiny_webcam.py
(+42 files in other folders)
